--fix Profile.module.css gap/padding**

--- a/client/src/app/profile/Profile.module.css
+++ b/client/src/app/profile/Profile.module.css
@@ -50,8 +50,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 15px;
     border-radius: 8px;
-    padding: 4px 8px;
+    padding: 20px 25px;
     font-size: 14px;
     color: #221f1f;
     transition: all .2s ease-in-out;
@@ -75,6 +76,12 @@
     transition: all .2s ease-in-out;
 }
 
-.description {
+@media all  and (max-width: 760px) {
+    .sidebar{
+        display: none;
+    }
 
+    .main {
+        flex: 0 0 100%;
+    }
 }
